<resources>
    <string name="app_name">ChatApplication</string>
    <string name="app_logo">Chat Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="logout_button">Log out</string>
    <string name="message_hint">Type a message…</string>
</resources>