<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_logo"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="10dp"
        android:hint="@string/name_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:text="@string/sign_up_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_background"/>




</RelativeLayout>